<resources>
    <string name="app_name">Desafio 3 Digital House</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to the Marvel HQ\'s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="create_account">Create account</string>
    <string name="log_in">LOG IN</string>
    <string name="name">Name</string>
    <string name="save">SAVE</string>
    <string name="comic_number">#Numero</string>
    <string name="marvel">Marvel</string>
    <string name="published">Published :</string>
    <string name="price">Price : $ </string>
    <string name="pages">Pages :</string>
    <string name="figura_capa_quadrinho">Figura capa quadrinho</string>
</resources>