<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00162C"
    tools:context=".login.view.LoginFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/redCardView"
        android:layout_width="match_parent"
        android:layout_height="382dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/vermelho"
        app:cardCornerRadius="@dimen/dim15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto"
                android:singleLine="true"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:autoSizeTextType="uniform" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dim15dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtEmailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/email"
                        android:textColorHint="@color/vermelho"
                        app:boxBackgroundColor="@color/transparentColor"
                        app:boxStrokeColor="@color/boxStrokeColor"
                        app:hintTextColor="@color/vermelho"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEmailLogin"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/textColor"
                            android:textSize="20sp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:hint="@string/password"
                        android:textColorHint="@color/vermelho"
                        app:boxBackgroundColor="@color/transparentColor"
                        app:boxStrokeColor="@color/boxStrokeColor"
                        app:hintTextColor="@color/vermelho"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtEmailLogin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPasswordLogin"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"
                            android:textColor="@color/textColor"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/checkBoxRemember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/vermelho"
                        android:fontFamily="@font/roboto"
                        android:text="@string/remember"
                        android:textColor="@color/checkboxTextColor"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/tilPasswordLogin"
                        app:layout_constraintTop_toBottomOf="@+id/tilPasswordLogin" />

                    <Button
                        android:id="@+id/btnCreatAccount"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/create_account"
                        android:textAllCaps="false"
                        android:textColor="@color/creatAccountColor"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="346dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/vermelho"
                        android:fontFamily="@font/roboto"
                        android:paddingVertical="5dp"
                        android:text="@string/log_in"
                        android:textSize="21sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/checkBoxRemember"
                        app:layout_constraintTop_toBottomOf="@+id/checkBoxRemember" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>