<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00162C"
    tools:context=".login.view.LoginFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/redCardView"
        android:layout_width="match_parent"
        android:layout_height="382dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint=""
        app:cardBackgroundColor="@color/vermelho"
        app:cardCornerRadius="@dimen/dim15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63">>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/whiteCard"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="bottom"
            app:cardBackgroundColor="@color/blank"
            app:cardCornerRadius="@dimen/dim15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/vermelho"
                    android:fontFamily="@font/roboto"
                    android:text="@string/save"
                    android:textSize="21sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtPasswordRegister"
                    app:layout_constraintVertical_bias="1.0" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtPasswordRegister"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/vermelho"
                    app:boxStrokeColor="@color/boxStrokeColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtEmailRegister"
                    tools:layout_editor_absoluteX="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPasswordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtEmailRegister"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/vermelho"
                    app:boxStrokeColor="@color/boxStrokeColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtNameRegister"
                    tools:layout_editor_absoluteY="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/textColor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtNameRegister"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/name"
                    android:textColorHint="@color/vermelho"
                    app:boxStrokeColor="@color/boxStrokeColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>
    </com.google.android.material.card.MaterialCardView>




    >



]]>
</androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>